<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- Logo area (RelativeLayout for overlap if needed) -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/ivLoginLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"/>
    </RelativeLayout>

    <!-- Fields -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvSignupLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_no_account"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>
